--- a/docs/_includes/nav/component.html
+++ b/docs/_includes/nav/component.html
@@ -45,6 +45,12 @@
     </ul>
 </li>
 <li>
+    <a href="#tab">Tab Content</a>
+    <ul>
+        <li><a href="#tab-basic">Penggunaan</a></li>
+    </ul>
+</li>
+<li>
     <a href="#navbar">Navbar</a>
     <ul>
         <li><a href="#navbar-overview">Overview</a></li>
@@ -55,9 +61,12 @@
     </ul>
 </li>
 <li>
-    <a href="#tab">Tab Content</a>
+    <a href="#sidebar">Sidebar</a>
     <ul>
-        <li><a href="#tab-basic">Penggunaan</a></li>
+        <li><a href="#sidebar-basic">Dasar / Default</a></li>
+        <li><a href="#sidebar-positioning">Varian Posisi</a></li>
+        <li><a href="#sidebar-off-canvas">Off Canvas</a></li>
+        <li><a href="#sidebar-invert">Versi Aksen Invert</a></li>
     </ul>
 </li>
 <li>
