--- a/less/components.less
+++ b/less/components.less
@@ -28,6 +28,8 @@
 @import "components/carousel.less";
 @import "components/navs.less";
 @import "components/navbar.less";
+@import "components/sidebar.less";
+@import "components/off-canvas.less";
 
 /**
  * Block
