--- a/docs/_includes/header-example.html
+++ b/docs/_includes/header-example.html
@@ -1,4 +1,3 @@
-
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,18 +6,13 @@
 <meta name="author" content="Muhammad Hasan and Lussa Team">
 
 <title>
-  {% if page.layout == "home" %}
-    {{ page.title }}
-  {% else %}
     {{ page.title }} &middot; Lussa UI
-  {% endif %}
 </title>
 
 <!-- lussa ui -->
-<link rel="stylesheet" type="text/css" href="dist/css/lussa-ui.min.css"/>
-<link rel="stylesheet" type="text/css"  href="assets/css/docs.css"/>
+<link rel="stylesheet" type="text/css" href="/dist/css/lussa-ui.min.css"/>
 <!-- syntax highlighting -->
-<link rel="stylesheet" type="text/css" href="assets/css/highlights/tomorrow_night.css"/>
+<link rel="stylesheet" type="text/css" href="/assets/css/highlights/tomorrow_night.css"/>
 
 <!-- Favicons -->
 <link rel="apple-touch-icon" href="/apple-touch-icon.png">
