--- a/less/components/off-canvas.less
+++ b/less/components/off-canvas.less
@@ -15,12 +15,17 @@
     .offcanvas;
   }
 }
+@media @mobile-and-tablet {
+  .offcanvas-mobile-and-tablet {
+    .offcanvas;
+  }
+}
 .offcanvas-dekstop {
   .offcanvas;
 }
 
-.canvas-sliding {
-  .transition(top 0.35s, left 0.35s, bottom 0.35s, right 0.35s);
+.canvas-sliding{
+  .transition(padding 0.35s,left 0.35s,top 0.35s,right 0.35s);
 }
 
 .offcanvas-clone {
