--- a/less/variables.less
+++ b/less/variables.less
@@ -381,11 +381,11 @@
  */
 @pagination-color:                     @accent-dark;
 @pagination-bg:                        @accent-clear;
-@pagination-border:                    @accent-dark;
+@pagination-border:                    @accent-soft;
 
 @pagination-hover-color:               @accent-dark;
 @pagination-hover-bg:                  @accent-light;
-@pagination-hover-border:              @accent-dark;
+@pagination-hover-border:              @accent-soft;
 
 @pagination-active-color:              @accent-light;
 @pagination-active-bg:                 @accent-primary;
