--- a/less/components/sidebar.less
+++ b/less/components/sidebar.less
@@ -271,3 +271,60 @@
     }
   }
 }
+
+.sidebar-toggle {
+  position: relative;
+  display: none;
+  margin-right: @navbar-padding-horizontal;
+  padding: 9px 10px;
+  .navbar-vertical-align(34px);
+  background-color: transparent;
+  background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
+  border: 1px solid transparent;
+  border-radius: @border-radius-base;
+
+  // We remove the `outline` here, but later compensate by attaching `:hover`
+  // styles to `:focus`.
+  &:focus {
+    outline: 0;
+  }
+
+  // Bars
+  .icon-bar {
+    display: block;
+    width: 22px;
+    height: 2px;
+    border-radius: 1px;
+  }
+  .icon-bar + .icon-bar {
+    margin-top: 4px;
+  }
+
+  border-color: @navbar-default-toggle-border-color;
+  &:hover,
+  &:focus {
+    background-color: @navbar-default-toggle-hover-bg;
+  }
+  .icon-bar {
+    background-color: @navbar-default-toggle-icon-bar-bg;
+  }
+}
+
+@media @mobile {
+  .sidebar-toggle-mobile {
+    display: block;
+  }
+}
+@media @tablet {
+  .sidebar-toggle-tablet {
+    display: block;
+  }
+}
+@media @mobile-and-tablet {
+  .sidebar-toggle-mobile-and-tablet {
+    display: block;
+  }
+}
+.sidebar-toggle-desktop {
+  display: block;
+}
