--- a/docs/_includes/css/buttons.html
+++ b/docs/_includes/css/buttons.html
@@ -430,3 +430,49 @@
         </div>
     </div>
 </div>
+
+<!-- Button Labeled  -->
+<h2 class="docs-subsection-title" id="buttons-label">Button Label</h2>
+<div class="docs-subsection-desc">
+    <p>
+        Tambahan (add-on) tampilan, disamping tombol. Dengan menambahkan kelas <code>.button-labeled</code> dan <code>.button-label</code> untuk label.
+    </p>
+</div>
+<div class="docs-tab">
+    <ul class="docs-tab-link-container">
+        <li>tampilan</li>
+        <li>&lt;html&gt;</li>
+    </ul>
+    <div class="docs-tab-content-container">
+        <div class="docs-tab-content">
+            <div class="docs-example">
+<!-- Standard button with label -->
+<button type="button" class="button button-labeled button-default"><span class="button-label"><i class="icon icon-arrow-left-c"></i></span>Left</button>
+
+<!-- Standard button with label on the right side -->
+<button type="button" class="button button-labeled button-default">Right<span class="button-label button-label-right"><i class="icon icon-arrow-right-c"></i></span></button>
+
+<!-- Success button with label -->
+<button type="button" class="button button-labeled button-success"><span class="button-label"><i class="icon icon-checkmark-circled"></i></span>Success</button>
+
+<!-- Danger button with label -->
+<button type="button" class="button button-labeled button-error"><span class="button-label"><i class="icon icon-android-close"></i></span>Error</button>
+            </div>
+        </div>
+        <div class="docs-tab-content">
+{% highlight html %}
+<!-- Standard button with label -->
+<button type="button" class="button button-labeled button-default"><span class="button-label"><i class="icon icon-arrow-left-c"></i></span>Left</button>
+
+<!-- Standard button with label on the right side -->
+<button type="button" class="button button-labeled button-default">Right<span class="button-label button-label-right"><i class="icon icon-arrow-right-c"></i></span></button>
+
+<!-- Success button with label -->
+<button type="button" class="button button-labeled button-success"><span class="button-label"><i class="icon icon-checkmark-circled"></i></span>Success</button>
+
+<!-- Danger button with label -->
+<button type="button" class="button button-labeled button-error"><span class="button-label"><i class="icon icon-android-close"></i></span>Error</button>
+{% endhighlight %}
+        </div>
+    </div>
+</div>
