--- a/docs/_includes/nav/component.html
+++ b/docs/_includes/nav/component.html
@@ -17,7 +17,7 @@
         <li><a href="#form-input-auto-complete">Auto Complete</a></li>
         <li><a href="#form-input-rating">Rating</a></li>
         <li><a href="#form-validation">Validasi</a></li>
-        <li><a href="#form-filter">Form Filter</a></li>
+        <li><a href="#form-input-mask">Input Masking</a></li>
     </ul>
 </li>
 <li>
