--- a/docs/_includes/nav/main.html
+++ b/docs/_includes/nav/main.html
@@ -23,4 +23,9 @@
             </li>
         </ul>
     </div>
+    <button class="docs-navbar-toggle">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+    </button>
 </div>
