--- a/less/mixins/buttons.less
+++ b/less/mixins/buttons.less
@@ -69,3 +69,17 @@
     background-color: @color;
   }
 }
+
+
+
+.button-label-size(@padding-vertical; @padding-horizontal; @border-radius) {
+  padding: @padding-vertical @padding-horizontal;
+  left: (-1 * @padding-horizontal);
+  border-radius: (@border-radius - 1px) 0 0 (@border-radius - 1px);
+
+  &.button-label-right {
+    left: auto;
+    right: (-1 * @padding-horizontal);
+    border-radius: 0 (@border-radius - 1px) (@border-radius - 1px) 0;
+  }
+}
