--- a/docs/_includes/nav/css.html
+++ b/docs/_includes/nav/css.html
@@ -82,6 +82,7 @@
         <li><a href="#buttons-accent">Aksen</a></li>
         <li><a href="#buttons-sizes">Variasi Ukuran</a></li>
         <li><a href="#buttons-state">Button State</a></li>
+        <li><a href="#buttons-label">Button Label</a></li>
     </ul>
 </li>
 <li>
