fix responsive table

--- a/docs/_includes/component/overview.html
+++ b/docs/_includes/component/overview.html
@@ -69,6 +69,7 @@ var app = angular.module('YourFunkyAppName', [
     <p>
         Standar penamaan dan semantik perlu distandarisasi untuk memudahkan developer dalam memahami atribut-atribut khusus tiap komponen dan cara menggunakannya.
     </p>
+    <div class="table-responsive">
     <table class="table bg-clear">
         <tbody>
             <thead>
@@ -168,5 +169,6 @@ angular.directive('loadingBar', [, function(){
             </tr>
         </tbody>
     </table>
+    </div>
 </div>
 
