add dynamic table. with filtering, sorting, grouping, pagination and data aggregation

--- a/docs/_includes/nav/component.html
+++ b/docs/_includes/nav/component.html
@@ -103,6 +103,19 @@
     </ul>
 </li>
 <li>
+    <a href="#table">Tabel Dinamis</a>
+    <ul>
+        <li><a href="#table-overview">Intro..</a></li>
+        <li><a href="#table-pagination">Halaman</a></li>
+        <li><a href="#table-sorting">Sorting</a></li>
+        <li><a href="#table-filtering">Filtering</a></li>
+        <li><a href="#table-grouping">Pengelompokan / Grouping</a></li>
+        <li><a href="#table-customize">Customizing</a></li>
+        <li><a href="#table-summary">Baris total / summary</a></li>
+        <li><a href="#table-extend">Plugin</a></li>
+    </ul>
+</li>
+<li>
     <a href="#pagination">Pagination</a>
     <ul>
         <li><a href="#pagination-example">Contoh</a></li>
