--- a/docs/_includes/nav/component.html
+++ b/docs/_includes/nav/component.html
@@ -36,6 +36,12 @@
     </ul>
 </li>
 <li>
+    <a href="#modal">Modal</a>
+    <ul>
+        <li><a href="#modal-basic">Contoh Dasar</a></li>
+    </ul>
+</li>
+<li>
     <a href="#nav">Navigasi</a>
     <ul>
         <li><a href="#nav-tabs">Tab</a></li>
