--- a/less/components.less
+++ b/less/components.less
@@ -29,6 +29,7 @@
 @import "components/navs.less";
 @import "components/navbar.less";
 @import "components/sidebar.less";
+@import "components/modal.less";
 @import "components/off-canvas.less";
 
 /**
