--- a/less/variables.less
+++ b/less/variables.less
@@ -552,6 +552,26 @@
 @sidebar-inverse-search-border:              @sidebar-inverse-bg;
 @sidebar-inverse-search-placeholder-color:   #ccc;
 
+/**
+ * Modal
+ */
+@modal-inner-padding:         15px;
+@modal-title-padding:         15px;
+@modal-title-line-height:     @line-height-base;
+
+@modal-content-bg:                             #fff;
+@modal-content-border-color:                   rgba(0,0,0,.2);
+@modal-content-fallback-border-color:          #999;
+
+@modal-backdrop-bg:           #000;
+@modal-backdrop-opacity:      .5;
+@modal-header-border-color:   #e5e5e5;
+@modal-footer-border-color:   @modal-header-border-color;
+
+@modal-large:                    900px;
+@modal-medium:                    600px;
+@modal-small:                    300px;
+
 
 /**
  * Z-Index
@@ -561,7 +581,9 @@
 @zindex-dropdown:          1000;
 @zindex-navbar-fixed:      1030;
 @zindex-sidebar-fixed:     1030;
-@zindex-loading-bar:      1033;
+@zindex-modal-background:  1040;
+@zindex-modal:             1050;
+@zindex-loading-bar:       1060;
 
 /**
  * Grid
